Fix nav alignment

--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -40,10 +40,14 @@ nav {
 			transition: all 0.5s ease-in-out;
 
 			@media (max-width: 768px) {
-				left: -8px;
 				visibility: visible;
 				opacity: 1;
 				font-size: 14px;
+				left: 0;
+			}
+
+			@media (max-width: 600px) {
+				left: -8px;
 			}
 		}
 
